[package]
name = "ceailo-site"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argon2 = "0.4.1"
axum = "0.6.8"
jsonwebtoken = "8.2.0"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
sqlx = { version = "0.6.2", features = ["runtime-tokio-rustls", "any", "postgres"] }
tokio = { version = "1.25", features = ["full"] }
toml = "0.7.2"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
uuid = "1.3.0"
